--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
-# image: docker:20.10.8
-# services:
-#   - docker:20.10.8-dind
+ image: docker:20.10.8
+ services:
+   - docker:20.10.8-dind
 
 
 stages:
@@ -9,7 +9,7 @@ stages:
 
 build:
  stage: build
-  image: docker:20.10.8-dind
+  # image: docker:20.10.8-dind
 #  image: centos:latest
 #  image: python:3.9-slim
  script:
