--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
- image: docker:20.10.8
- services:
-   - docker:20.10.8-dind
+#  image: docker:20.10.8
+#  services:
+#    - docker:20.10.8-dind
 
 
 stages:
  - build
-
 
 build:
  stage: build
@@ -15,5 +14,6 @@ build:
  script:
   - pwd
   - ls -la
+  - docker --version
   - docker build .
 
