--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
 
 build:
  stage: build
-   image: docker:20.10.8-dind
+  #  image: docker:20.10.8-dind
 #  image: centos:latest
 #  image: python:3.9-slim
  script:
