--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
-#  image: docker:20.10.8
-#  services:
-#    - docker:20.10.8-dind
+  image: docker:dind
+  services:
+    - docker:dind
 
 
 stages:
