--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
-  # image: docker:dind
-  # services:
-  #   - docker:dind
+image: docker:dind
+services:
+  - docker:dind
 
 
 stages:
@@ -8,8 +8,8 @@ stages:
 
 build:
  stage: build
-   image: docker:dind
-  #  image: docker:20.10.8-dind
+  #  image: docker:dind
+   image: docker:20.10.8-dind
 #  image: centos:latest
 #  image: python:3.9-slim 1
  script:
